--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   share_plus: ^10.1.3
   webview_flutter: ^4.10.0
   cached_network_image: ^3.4.1
+  flutter_inappwebview: ^6.0.0
+  dio: ^5.7.0
+  path_provider: ^2.1.5
 
 
 dev_dependencies:
@@ -101,6 +104,7 @@ flutter:
     - assets/lang/
     - assets/images/
     - assets/stickers/
+    - assets/javascript/
     
     
 
