--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   flutter_inappwebview: ^6.0.0
   dio: ^5.7.0
   path_provider: ^2.1.5
+  adapty_flutter: ^3.3.1
+  in_app_review: ^2.0.10
 
 
 dev_dependencies:
