--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.0.2+002
+version: 0.0.3+003
 
 environment:
   sdk: ^3.6.0
@@ -54,6 +54,8 @@ dependencies:
   adapty_flutter: ^3.3.1
   in_app_review: ^2.0.10
   flutter_native_splash: ^2.4.4
+  firebase_core: ^3.10.0
+  firebase_analytics: ^11.4.0
 
 
 dev_dependencies:
